backend/api/tests/integration/snapshots/integration__image__browse.snap
---
source: tests/integration/image.rs
expression: body
---
{
  "images": [
    {
      "metadata": {
        "id": "3095d05e-f2c7-11ea-89c3-3b621dd74a1f",
        "name": "test",
        "description": "testest",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2020-09-09T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "710043d0-0a9b-11ec-9f5e-47290fe78365",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "7100447a-0a9b-11ec-9f5e-27e93628ecf8",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "710044ca-0a9b-11ec-9f5e-af0642589fb8",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "7100451a-0a9b-11ec-9f5e-17d67fa55c21",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "71004560-0a9b-11ec-9f5e-130e0f157cd2",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "710045a6-0a9b-11ec-9f5e-ab6585077bcd",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "710045ec-0a9b-11ec-9f5e-4705e4763c4a",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "71004632-0a9b-11ec-9f5e-53c3e963010b",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "71004678-0a9b-11ec-9f5e-0f321f64bed2",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "710046b4-0a9b-11ec-9f5e-cb07bd3af092",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "710046fa-0a9b-11ec-9f5e-9b77f8801041",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "71004740-0a9b-11ec-9f5e-ef9aad54a89e",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "71004786-0a9b-11ec-9f5e-c3aad9c7738a",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "710047c2-0a9b-11ec-9f5e-93af7ac3e44c",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "71004808-0a9b-11ec-9f5e-27b95bb4a925",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "7100484e-0a9b-11ec-9f5e-e7d60617d001",
        "name": "test",
        "description": "test description",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "8cca6f3a-c4bb-11eb-8edf-13c75672da8f",
        "name": "test1",
        "description": "test description 1",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "8cca7124-c4bb-11eb-8edf-7b42383ed8f5",
        "name": "test2",
        "description": "test description 2",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    },
    {
      "metadata": {
        "id": "8cca719c-c4bb-11eb-8edf-f7accb638a15",
        "name": "test3",
        "description": "test description ",
        "translated_description": {},
        "is_premium": false,
        "size": "Canvas",
        "publish_at": null,
        "styles": [],
        "tags": [],
        "age_ranges": [],
        "affiliations": [],
        "categories": [],
        "created_at": "2021-05-01T18:06:31.575087Z",
        "updated_at": null
      }
    }
  ],
  "pages": 2,
  "totalImageCount": 36
}
