backend/api/tests/integration/snapshots/integration__image__create_with_affiliation_error.snap
---
source: tests/integration/image.rs
expression: body
---
{
  "code": 422,
  "message": "Metadata not Found",
  "id": "6389eaa0-de76-11ea-b7ab-0399bcf84df2",
  "index": null,
  "kind": "Affiliation",
  "media_group_kind": null
}
