backend/api/tests/integration/snapshots/integration__image__create_with_tags_error.snap
---
source: tests/integration/image.rs
expression: body
---
{
  "message": "Metadata not Found",
  "id": null,
  "index": 22,
  "kind": "Tag",
  "media_group_kind": {
    "media_kind": "image"
  }
}
