backend/api/tests/integration/snapshots/integration__image__update_empty.snap
---
source: tests/integration/image.rs
expression: body
---
{
  "metadata": {
    "id": "3095d05e-f2c7-11ea-89c3-3b621dd74a1f",
    "name": "test",
    "description": "testest",
    "translated_description": {},
    "is_premium": false,
    "size": "Canvas",
    "publish_at": null,
    "styles": [],
    "tags": [],
    "age_ranges": [],
    "affiliations": [],
    "categories": [],
    "created_at": "2020-09-09T18:06:31.575087Z",
    "updated_at": "[timestamp]"
  }
}
